--- a/from_scratch.ipynb
+++ b/from_scratch.ipynb
@@ -11,6 +11,16 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": "### Work in progress, please go to main.ipynb for current results",
+   "metadata": {
+    "cell_id": "26fbee32-a9a8-4939-bd6a-123ba5bf42c8",
+    "tags": [],
+    "is_collapsed": false,
+    "deepnote_cell_type": "text-cell-h3"
+   }
+  },
+  {
    "cell_type": "code",
    "metadata": {
     "tags": [],
@@ -18,8 +28,8 @@
     "deepnote_cell_type": "code"
    },
    "source": "# Modified from https://towardsdatascience.com/how-to-build-your-own-neural-network-from-scratch-in-python-68998a08e4f6\n\nclass NN:\n    def __init__(self, x, y):\n        self.input      = x\n        self.weights1   = np.random.rand(self.input.shape[1],4) \n        self.weights2   = np.random.rand(4,1)                 \n        self.y          = y\n        self.output     = np.zeros(self.y.shape)\n\n    def feedforward(self):\n        self.layer1 = sigmoid(np.dot(self.input, self.weights1))\n        self.output = sigmoid(np.dot(self.layer1, self.weights2))\n\n    def backprop(self):\n        # application of the chain rule to find derivative of the loss function with respect to weights2 and weights1\n        d_weights2 = np.dot(self.layer1.T, (2*(self.y - self.output) * sigmoid_derivative(self.output)))\n        d_weights1 = np.dot(self.input.T,  (np.dot(2*(self.y - self.output) * sigmoid_derivative(self.output), self.weights2.T) * sigmoid_derivative(self.layer1)))\n\n        # update the weights with the derivative (slope) of the loss function\n        self.weights1 += d_weights1\n        self.weights2 += d_weights2\n\nNN()",
-   "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
