abstract stochasticity wip

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,8 +26,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,8 +71,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model constructor"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,13 +89,20 @@
     "class Model(object):\n",
     "\n",
     "    # Fully connected neural network with layer i having sizes[i] neurons\n",
-    "    def __init__(self, sizes):\n",
+    "    def __init__(self, sizes, weights=None, biases=None):\n",
     "        self.num_layers = len(sizes)\n",
     "        self.sizes = sizes\n",
     "\n",
-    "        # Initialize weights & biases\n",
-    "        self.weights = [np.random.randn(y, x) for y, x in zip(sizes[1:], sizes[:-1])] # Initialize weights array of shape (num_neurons_i, num_neurons_i-1) for each layer i except the input layer\n",
-    "        self.biases = [np.random.randn(y, 1) for y in sizes[1:]] # Initialize biases array of shape (num_neurons_i, 1) for each layer i except the input layer\n",
+    "        # Initialize weights & biases if not provided\n",
+    "        if weights is None:\n",
+    "            self.weights = [np.random.randn(y, x) for y, x in zip(sizes[1:], sizes[:-1])] # Initialize weights array of shape (num_neurons_i, num_neurons_i-1) for each layer i except the input layer\n",
+    "        else:\n",
+    "            self.weights = weights\n",
+    "        \n",
+    "        if biases is None:\n",
+    "            self.biases = [np.random.randn(y, 1) for y in sizes[1:]] # Initialize biases array of shape (num_neurons_i, 1) for each layer i except the input layer\n",
+    "        else:\n",
+    "            self.biases = biases\n",
     "\n",
     "        # Initialize training history\n",
     "        self.history = {'train': {'acc':[], 'loss':[]}, 'val': {'acc':[], 'loss':[]}, 'latent':[]}\n",
@@ -157,13 +178,13 @@
     "\n",
     "    # Model training using SGD\n",
     "    # training_data is a list of tuples (x, y) representing the training inputs and the desired outputs\n",
-    "    def fit(self, training_data, epochs = 10, batch_size = 10, learning_rate = 3, validation_size=0.3):\n",
+    "    def fit(self, training_data, epochs = 10, batch_size = 10, learning_rate = 1.5, validation_size=0.3, shuffle_order=None, store_latent_vecs=False):\n",
     "        \n",
     "        # Take last portion of training data as validation data\n",
     "        training_data = training_data[:-int(validation_size*len(training_data))]\n",
     "        val_data = training_data[-int(validation_size*len(training_data)):]\n",
     "\n",
-    "        ## Store baseline model characteristics (befor training)\n",
+    "        ## Store baseline model characteristics (before training)\n",
     "        # Evaluate model on validation data\n",
     "        val_acc, val_loss = self.evaluate(val_data)\n",
     "        print(f\"Baseline characteristics: Validation accuracy: {val_acc}. Mean validation loss: {val_loss}\")\n",
@@ -172,7 +193,9 @@
     "        self.history['train']['loss'].append(np.nan)\n",
     "        self.history['val']['acc'].append(val_acc)\n",
     "        self.history['val']['loss'].append(val_loss)\n",
-    "        self.history['latent'].append([(self.feedforward(x, layer_num = 2), np.argmax(y)) for x, y in training_data]) # Store latent representation of training data before training\n",
+    "        # Store latent vectors\n",
+    "        if store_latent_vecs:\n",
+    "            self.history['latent'].append([(self.feedforward(x, layer_num = 2), np.argmax(y)) for x, y in training_data]) # Store latent representation of training data before training\n",
     "\n",
     "        # Iterate through each epoch\n",
     "        print(f'Training on {len(training_data)} examples, validating on {len(val_data)} examples')\n",
@@ -181,8 +204,13 @@
     "            train_acc = []\n",
     "            train_loss = []\n",
     "\n",
-    "            np.random.shuffle(training_data) # Shuffle training data\n",
-    "            batches = [training_data[k:k+batch_size] for k in range(0, len(training_data), batch_size)] # Construct training batches for SGD\n",
+    "            # Shuffle training data in preparation for SGD batching\n",
+    "            if shuffle_order is None:\n",
+    "                np.random.shuffle(training_data) # Shuffle training data randomly\n",
+    "            else:\n",
+    "                training_data = training_data[shuffle_order[j]] # Shuffle training data according to order provided\n",
+    "            # Construct training batches for SGD\n",
+    "            batches = [training_data[k:k+batch_size] for k in range(0, len(training_data), batch_size)]\n",
     "            # Iterate through all batches\n",
     "            for batch in batches:\n",
     "                nabla_b = [np.zeros(b.shape) for b in self.biases] # Initialize list of loss gradients with respect to biases, one gradient for each layer\n",
@@ -212,7 +240,9 @@
     "            self.history['train']['loss'].append(train_loss)\n",
     "            self.history['val']['acc'].append(val_acc)\n",
     "            self.history['val']['loss'].append(val_loss)\n",
-    "            self.history['latent'].append([(self.feedforward(x, layer_num = 2), np.argmax(y)) for x, y in training_data]) # Store latent representation of training data after each epoch\n",
+    "            # Store latent vectors\n",
+    "            if store_latent_vecs:\n",
+    "                self.history['latent'].append([(self.feedforward(x, layer_num = 2), np.argmax(y)) for x, y in training_data]) # Store latent representation of training data after each epoch\n",
     "\n",
     "\n",
     "    def evaluate(self, test_data):\n",
@@ -234,6 +264,68 @@
     "            activations = self.activation(np.dot(self.weights[current_layer - 1], activations) + self.biases[current_layer - 1])\n",
     "            current_layer += 1\n",
     "        return activations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set global stochastic params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n",
+      "[0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Model architecture\n",
+    "sizes = [784, 30, 2, 10]\n",
+    "epochs = 10\n",
+    "batch_size = 10\n",
+    "learning_rate = 1.5\n",
+    "validation_size=0.3\n",
+    "\n",
+    "# Initialize weights array of shape (num_neurons_i, num_neurons_i-1) for each layer i except the input layer\n",
+    "weights = [np.random.randn(y, x) for y, x in zip(sizes[1:], sizes[:-1])]\n",
+    "\n",
+    "# Initialize biases array of shape (num_neurons_i, 1) for each layer i except the input layer\n",
+    "biases = [np.random.randn(y, 1) for y in sizes[1:]] \n",
+    "\n",
+    "# Initialize list of data indices for data shuffling per epoch\n",
+    "shuffle_order = [np.random.permutation(int(len(training_data)*(1 - validation_size))) for i in range(epochs)]\n",
+    "\n",
+    "print(shuffle_order[0])\n",
+    "print(shuffle_order[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 5, 3, 4])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.permutation(6)"
    ]
   },
   {
