--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
     "        ## Store baseline model characteristics (before training)\n",
     "        # Evaluate model on validation data\n",
     "        val_acc, val_loss = self.evaluate(val_data)\n",
-    "        print(f\"Baseline characteristics: Validation accuracy: {val_acc}. Mean validation loss: {val_loss}\")\n",
+    "        print(f\"Baseline characteristics: Validation accuracy: {val_acc:.4f}. Mean validation loss: {val_loss:.4f}\")\n",
     "        # Update global history\n",
     "        self.history['train']['acc'].append(np.nan)\n",
     "        self.history['train']['loss'].append(np.nan)\n",
@@ -239,7 +239,7 @@
     "            end_time = time.time()\n",
     "            # Print epoch number (epochs start at 1)\n",
     "            print(f\"Epoch {j+1} complete. Time taken: {end_time - start_time:.2f} seconds.\")\n",
-    "            print(f\"Training accuracy: {train_acc}. Validation accuracy: {val_acc}. Mean training loss: {train_loss}. Mean validation loss: {val_loss}\")\n",
+    "            print(f\"Training accuracy: {train_acc:.4f}. Validation accuracy: {val_acc:.4f}. Mean training loss: {train_loss:.4f}. Mean validation loss: {val_loss:.4f}\")\n",
     "\n",
     "            # Update global history\n",
     "            self.history['train']['acc'].append(train_acc)\n",
@@ -280,59 +280,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Verify that model training is reproducible"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Build & train first model\n",
-    "model1 = Model(sizes, weights, biases)\n",
-    "model1.fit(train_data, epochs = epochs, batch_size = batch_size, learning_rate = learning_rate, validation_size = validation_size, shuffle_order = shuffle_order, store_latent_vecs = False)\n",
-    "test_acc, test_loss = model1.evaluate(test_data)\n",
-    "print(f'Test accuracy: {test_acc}. Mean test loss: {test_loss}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Build & train second model\n",
-    "model2 = Model(sizes, weights, biases)\n",
-    "model2.fit(train_data, epochs = epochs, batch_size = batch_size, learning_rate = learning_rate, validation_size = validation_size, shuffle_order = shuffle_order, store_latent_vecs = True)\n",
-    "test_acc, test_loss = model2.evaluate(test_data)\n",
-    "print(f'Test accuracy: {test_acc}. Mean test loss: {test_loss}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f'Model weights were reproducible: {model1.weights == model2.weights}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,6 +300,118 @@
     "\n",
     "# Initialize list of data indices for data shuffling per epoch\n",
     "shuffle_order = [np.random.permutation(int(len(train_data)*(1 - validation_size))) for i in range(epochs)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Verify that model training is reproducible"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of model parameters: 23642\n",
+      "Baseline characteristics: Validation accuracy: 0.09619047619047619. Mean validation loss: 0.3913636964617906\n",
+      "Training on 42000 examples, validating on 12600 examples\n",
+      "Epoch 1 complete. Time taken: 66.02 seconds.\n",
+      "Training accuracy: 0.40576190476190477. Validation accuracy: 0.5238095238095238. Mean training loss: 0.06967855704023915. Mean validation loss: 0.061993250668054396\n",
+      "Epoch 2 complete. Time taken: 68.37 seconds.\n",
+      "Training accuracy: 0.5539285714285714. Validation accuracy: 0.6136507936507937. Mean training loss: 0.0592155730971208. Mean validation loss: 0.05632097621720824\n",
+      "Epoch 3 complete. Time taken: 66.92 seconds.\n",
+      "Training accuracy: 0.6072619047619048. Validation accuracy: 0.6633333333333333. Mean training loss: 0.05494025965816666. Mean validation loss: 0.05160415026532875\n",
+      "Epoch 4 complete. Time taken: 67.30 seconds.\n",
+      "Training accuracy: 0.6270238095238095. Validation accuracy: 0.6349206349206349. Mean training loss: 0.051984795721949806. Mean validation loss: 0.05158323776861175\n",
+      "Epoch 5 complete. Time taken: 65.70 seconds.\n",
+      "Training accuracy: 0.649547619047619. Validation accuracy: 0.6631746031746032. Mean training loss: 0.05050333198588217. Mean validation loss: 0.05224608162092851\n",
+      "Epoch 6 complete. Time taken: 64.19 seconds.\n",
+      "Training accuracy: 0.6703095238095238. Validation accuracy: 0.5176984126984127. Mean training loss: 0.04929977757110336. Mean validation loss: 0.05588446093717504\n",
+      "Epoch 7 complete. Time taken: 65.16 seconds.\n",
+      "Training accuracy: 0.686. Validation accuracy: 0.6127777777777778. Mean training loss: 0.047910130008575386. Mean validation loss: 0.04897688373936934\n",
+      "Epoch 8 complete. Time taken: 63.75 seconds.\n",
+      "Training accuracy: 0.7045. Validation accuracy: 0.7301587301587301. Mean training loss: 0.046158032561517646. Mean validation loss: 0.042847714893868\n",
+      "Epoch 9 complete. Time taken: 66.41 seconds.\n",
+      "Training accuracy: 0.7237857142857143. Validation accuracy: 0.7610317460317461. Mean training loss: 0.04419261578358143. Mean validation loss: 0.042741395448858334\n",
+      "Epoch 10 complete. Time taken: 64.13 seconds.\n",
+      "Training accuracy: 0.7322619047619048. Validation accuracy: 0.7508730158730159. Mean training loss: 0.042872316161637065. Mean validation loss: 0.03938495690922791\n",
+      "Test accuracy: 0.7483. Mean test loss: 0.04045542785489169\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Build & train first model\n",
+    "model1 = Model(sizes, weights, biases)\n",
+    "model1.fit(train_data, epochs = epochs, batch_size = batch_size, learning_rate = learning_rate, validation_size = validation_size, shuffle_order = shuffle_order, store_latent_vecs = False)\n",
+    "test_acc, test_loss = model1.evaluate(test_data)\n",
+    "print(f'Test accuracy: {test_acc}. Mean test loss: {test_loss}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of model parameters: 23642\n",
+      "Baseline characteristics: Validation accuracy: 0.09619047619047619. Mean validation loss: 0.3913636964617906\n",
+      "Training on 42000 examples, validating on 12600 examples\n",
+      "Epoch 1 complete. Time taken: 60.10 seconds.\n",
+      "Training accuracy: 0.40576190476190477. Validation accuracy: 0.5238095238095238. Mean training loss: 0.06967855704023915. Mean validation loss: 0.061993250668054396\n",
+      "Epoch 2 complete. Time taken: 55.77 seconds.\n",
+      "Training accuracy: 0.5539285714285714. Validation accuracy: 0.6136507936507937. Mean training loss: 0.0592155730971208. Mean validation loss: 0.05632097621720824\n",
+      "Epoch 3 complete. Time taken: 55.37 seconds.\n",
+      "Training accuracy: 0.6072619047619048. Validation accuracy: 0.6633333333333333. Mean training loss: 0.05494025965816666. Mean validation loss: 0.05160415026532875\n",
+      "Epoch 4 complete. Time taken: 54.85 seconds.\n",
+      "Training accuracy: 0.6270238095238095. Validation accuracy: 0.6349206349206349. Mean training loss: 0.051984795721949806. Mean validation loss: 0.05158323776861175\n",
+      "Epoch 5 complete. Time taken: 54.61 seconds.\n",
+      "Training accuracy: 0.649547619047619. Validation accuracy: 0.6631746031746032. Mean training loss: 0.05050333198588217. Mean validation loss: 0.05224608162092851\n",
+      "Epoch 6 complete. Time taken: 54.83 seconds.\n",
+      "Training accuracy: 0.6703095238095238. Validation accuracy: 0.5176984126984127. Mean training loss: 0.04929977757110336. Mean validation loss: 0.05588446093717504\n",
+      "Epoch 7 complete. Time taken: 55.34 seconds.\n",
+      "Training accuracy: 0.686. Validation accuracy: 0.6127777777777778. Mean training loss: 0.047910130008575386. Mean validation loss: 0.04897688373936934\n",
+      "Epoch 8 complete. Time taken: 56.39 seconds.\n",
+      "Training accuracy: 0.7045. Validation accuracy: 0.7301587301587301. Mean training loss: 0.046158032561517646. Mean validation loss: 0.042847714893868\n",
+      "Epoch 9 complete. Time taken: 57.96 seconds.\n",
+      "Training accuracy: 0.7237857142857143. Validation accuracy: 0.7610317460317461. Mean training loss: 0.04419261578358143. Mean validation loss: 0.042741395448858334\n",
+      "Epoch 10 complete. Time taken: 58.56 seconds.\n",
+      "Training accuracy: 0.7322619047619048. Validation accuracy: 0.7508730158730159. Mean training loss: 0.042872316161637065. Mean validation loss: 0.03938495690922791\n",
+      "Test accuracy: 0.7483. Mean test loss: 0.04045542785489169\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Build & train second model\n",
+    "model2 = Model(sizes, weights, biases)\n",
+    "model2.fit(train_data, epochs = epochs, batch_size = batch_size, learning_rate = learning_rate, validation_size = validation_size, shuffle_order = shuffle_order, store_latent_vecs = True)\n",
+    "test_acc, test_loss = model2.evaluate(test_data)\n",
+    "print(f'Test accuracy: {test_acc}. Mean test loss: {test_loss}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model weights were reproducible: [True, True, True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Model weights were reproducible: {[np.array_equal(model1.weights[i], model2.weights[i]) for i in range(len(model1.weights))]}')"
    ]
   },
   {
