store initial weights and biases in model object

--- a/main.ipynb
+++ b/main.ipynb
@@ -105,6 +105,10 @@
     "        else:\n",
     "            self.biases = biases\n",
     "\n",
+    "        # Store initial weights and biases\n",
+    "        self.initial_weights = self.weights\n",
+    "        self.initial_biases = self.biases\n",
+    "        \n",
     "        # Initialize training history\n",
     "        self.history = {'train': {'acc':[], 'loss':[]}, 'val': {'acc':[], 'loss':[]}, 'latent':[], 'weights':[], 'biases':[]}\n",
     "\n",
