Plot latent space similarity (by adjacency spectral distance) versus difference in initial weights, for each pair of models in models_list

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -405,27 +405,14 @@
       "Number of model parameters: 23642\n",
       "Baseline characteristics: Validation accuracy: 0.0962. Mean validation loss: 0.3914\n",
       "Training on 42000 examples, validating on 12600 examples\n",
-      "Epoch 1 complete. Time taken: 59.32 seconds.\n",
+      "Epoch 1 complete. Time taken: 67.32 seconds.\n",
       "Training accuracy: 0.4058. Validation accuracy: 0.5238. Mean training loss: 0.0697. Mean validation loss: 0.0620\n",
-      "Epoch 2 complete. Time taken: 61.44 seconds.\n",
+      "Epoch 2 complete. Time taken: 69.06 seconds.\n",
       "Training accuracy: 0.5539. Validation accuracy: 0.6137. Mean training loss: 0.0592. Mean validation loss: 0.0563\n",
-      "Epoch 3 complete. Time taken: 70.95 seconds.\n",
-      "Training accuracy: 0.6073. Validation accuracy: 0.6633. Mean training loss: 0.0549. Mean validation loss: 0.0516\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\azhan\\OneDrive - Harvard University\\Documents\\Research\\stochastic-nn\\main.ipynb Cell 15'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/azhan/OneDrive%20-%20Harvard%20University/Documents/Research/stochastic-nn/main.ipynb#ch0000014?line=0'>1</a>\u001b[0m \u001b[39m# Build & train model\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/azhan/OneDrive%20-%20Harvard%20University/Documents/Research/stochastic-nn/main.ipynb#ch0000014?line=1'>2</a>\u001b[0m model \u001b[39m=\u001b[39m Model(sizes, weights, biases)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/azhan/OneDrive%20-%20Harvard%20University/Documents/Research/stochastic-nn/main.ipynb#ch0000014?line=2'>3</a>\u001b[0m model\u001b[39m.\u001b[39;49mfit(train_data, epochs \u001b[39m=\u001b[39;49m epochs, batch_size \u001b[39m=\u001b[39;49m batch_size, learning_rate \u001b[39m=\u001b[39;49m learning_rate, validation_size \u001b[39m=\u001b[39;49m validation_size, shuffle_order \u001b[39m=\u001b[39;49m shuffle_order, store_latent_vecs \u001b[39m=\u001b[39;49m \u001b[39mTrue\u001b[39;49;00m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/azhan/OneDrive%20-%20Harvard%20University/Documents/Research/stochastic-nn/main.ipynb#ch0000014?line=3'>4</a>\u001b[0m test_acc, test_loss \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mevaluate(test_data)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/azhan/OneDrive%20-%20Harvard%20University/Documents/Research/stochastic-nn/main.ipynb#ch0000014?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mTest accuracy: \u001b[39m\u001b[39m{\u001b[39;00mtest_acc\u001b[39m}\u001b[39;00m\u001b[39m. Mean test loss: \u001b[39m\u001b[39m{\u001b[39;00mtest_loss\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m)\n",
-      "\u001b[1;32mc:\\Users\\azhan\\OneDrive - Harvard University\\Documents\\Research\\stochastic-nn\\main.ipynb Cell 5'\u001b[0m in \u001b[0;36mModel.fit\u001b[1;34m(self, training_data, epochs, batch_size, learning_rate, validation_size, shuffle_order, store_latent_vecs, verbose)\u001b[0m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/azhan/OneDrive%20-%20Harvard%20University/Documents/Research/stochastic-nn/main.ipynb#ch0000004?line=168'>169</a>\u001b[0m \u001b[39m# Store latent vectors\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/azhan/OneDrive%20-%20Harvard%20University/Documents/Research/stochastic-nn/main.ipynb#ch0000004?line=169'>170</a>\u001b[0m \u001b[39mif\u001b[39;00m store_latent_vecs:\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/azhan/OneDrive%20-%20Harvard%20University/Documents/Research/stochastic-nn/main.ipynb#ch0000004?line=170'>171</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhistory[\u001b[39m'\u001b[39m\u001b[39mlatent\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mappend([(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfeedforward(x, layer_num \u001b[39m=\u001b[39m \u001b[39m2\u001b[39m), np\u001b[39m.\u001b[39margmax(y)) \u001b[39mfor\u001b[39;00m x, y \u001b[39min\u001b[39;00m training_data]) \u001b[39m# Store latent representation of training data after each epoch\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/azhan/OneDrive%20-%20Harvard%20University/Documents/Research/stochastic-nn/main.ipynb#ch0000004?line=171'>172</a>\u001b[0m \u001b[39m# Store layer weights\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/azhan/OneDrive%20-%20Harvard%20University/Documents/Research/stochastic-nn/main.ipynb#ch0000004?line=172'>173</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhistory[\u001b[39m'\u001b[39m\u001b[39mweights\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mappend(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mweights)\n",
-      "\u001b[1;32mc:\\Users\\azhan\\OneDrive - Harvard University\\Documents\\Research\\stochastic-nn\\main.ipynb Cell 5'\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/azhan/OneDrive%20-%20Harvard%20University/Documents/Research/stochastic-nn/main.ipynb#ch0000004?line=168'>169</a>\u001b[0m \u001b[39m# Store latent vectors\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/azhan/OneDrive%20-%20Harvard%20University/Documents/Research/stochastic-nn/main.ipynb#ch0000004?line=169'>170</a>\u001b[0m \u001b[39mif\u001b[39;00m store_latent_vecs:\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/azhan/OneDrive%20-%20Harvard%20University/Documents/Research/stochastic-nn/main.ipynb#ch0000004?line=170'>171</a>\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhistory[\u001b[39m'\u001b[39m\u001b[39mlatent\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mappend([(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mfeedforward(x, layer_num \u001b[39m=\u001b[39;49m \u001b[39m2\u001b[39;49m), np\u001b[39m.\u001b[39margmax(y)) \u001b[39mfor\u001b[39;00m x, y \u001b[39min\u001b[39;00m training_data]) \u001b[39m# Store latent representation of training data after each epoch\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/azhan/OneDrive%20-%20Harvard%20University/Documents/Research/stochastic-nn/main.ipynb#ch0000004?line=171'>172</a>\u001b[0m \u001b[39m# Store layer weights\u001b[39;00m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/azhan/OneDrive%20-%20Harvard%20University/Documents/Research/stochastic-nn/main.ipynb#ch0000004?line=172'>173</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhistory[\u001b[39m'\u001b[39m\u001b[39mweights\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mappend(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mweights)\n",
-      "\u001b[1;32mc:\\Users\\azhan\\OneDrive - Harvard University\\Documents\\Research\\stochastic-nn\\main.ipynb Cell 5'\u001b[0m in \u001b[0;36mModel.feedforward\u001b[1;34m(self, x, layer_num)\u001b[0m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/azhan/OneDrive%20-%20Harvard%20University/Documents/Research/stochastic-nn/main.ipynb#ch0000004?line=192'>193</a>\u001b[0m current_layer \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/azhan/OneDrive%20-%20Harvard%20University/Documents/Research/stochastic-nn/main.ipynb#ch0000004?line=193'>194</a>\u001b[0m \u001b[39mwhile\u001b[39;00m current_layer \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m layer_num:\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/Users/azhan/OneDrive%20-%20Harvard%20University/Documents/Research/stochastic-nn/main.ipynb#ch0000004?line=194'>195</a>\u001b[0m     activations \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mactivation(np\u001b[39m.\u001b[39;49mdot(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mweights[current_layer \u001b[39m-\u001b[39;49m \u001b[39m1\u001b[39;49m], activations) \u001b[39m+\u001b[39;49m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbiases[current_layer \u001b[39m-\u001b[39;49m \u001b[39m1\u001b[39;49m])\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/azhan/OneDrive%20-%20Harvard%20University/Documents/Research/stochastic-nn/main.ipynb#ch0000004?line=195'>196</a>\u001b[0m     current_layer \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/Users/azhan/OneDrive%20-%20Harvard%20University/Documents/Research/stochastic-nn/main.ipynb#ch0000004?line=196'>197</a>\u001b[0m \u001b[39mreturn\u001b[39;00m activations\n",
-      "\u001b[1;32mc:\\Users\\azhan\\OneDrive - Harvard University\\Documents\\Research\\stochastic-nn\\main.ipynb Cell 5'\u001b[0m in \u001b[0;36mModel.activation\u001b[1;34m(self, x)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/azhan/OneDrive%20-%20Harvard%20University/Documents/Research/stochastic-nn/main.ipynb#ch0000004?line=34'>35</a>\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/azhan/OneDrive%20-%20Harvard%20University/Documents/Research/stochastic-nn/main.ipynb#ch0000004?line=35'>36</a>\u001b[0m         \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39mexp(x) \u001b[39m/\u001b[39m (\u001b[39m1\u001b[39m \u001b[39m+\u001b[39m np\u001b[39m.\u001b[39mexp(x))\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/azhan/OneDrive%20-%20Harvard%20University/Documents/Research/stochastic-nn/main.ipynb#ch0000004?line=36'>37</a>\u001b[0m \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39;49marray(\u001b[39mlist\u001b[39;49m(\u001b[39mmap\u001b[39;49m(sigmoid, x)))\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "Epoch 3 complete. Time taken: 69.47 seconds.\n",
+      "Training accuracy: 0.6073. Validation accuracy: 0.6633. Mean training loss: 0.0549. Mean validation loss: 0.0516\n",
+      "Epoch 4 complete. Time taken: 64.11 seconds.\n",
+      "Training accuracy: 0.6270. Validation accuracy: 0.6349. Mean training loss: 0.0520. Mean validation loss: 0.0516\n"
      ]
     }
    ],
@@ -744,7 +731,7 @@
     "    sns.scatterplot(data=df, x=\"x\", y=\"y\", hue=\"digit\", palette=colors, ax=ax[epoch], legend=False)\n",
     "\n",
     "    # Add title\n",
-    "    title = f'Weight[0][0] = {np.linspace(-2, 2, 20)[i]}'\n",
+    "    title = f'Weight[0][0] = {model.initial_weights[0][0]}'\n",
     "    ax[epoch].set_title(title)\n",
     "\n",
     "# Create legend in last subplot\n",
@@ -763,7 +750,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot latent space similarity (by adjacency spectral distance) versus difference in initial weights\n"
+    "# Plot latent space similarity (by adjacency spectral distance) versus difference in initial weights, for each pair of models in models_list\n",
+    "\n",
+    "spectral_distances = []\n",
+    "weight_deltas = []\n",
+    "for i in range(len(models_list)):\n",
+    "    for j in range(i + 1, len(models_list)):\n",
+    "        # Get adjacency spectral distances of last epoch latent vectors\n",
+    "        adjacency_matrix_1 = get_adjacency_matrix(models_list[i].history['latent'][-1])\n",
+    "        adjacency_matrix_2 = get_adjacency_matrix(models_list[j].history['latent'][-1])\n",
+    "        spectral_distances.append(adjacency_spectral_distance(adjacency_matrix_1, adjacency_matrix_2))\n",
+    "\n",
+    "        # Get absolute value difference between initial weights of first neuron in first hidden layer\n",
+    "        weight_difference = np.abs(models_list[i].initial_weights[0][0] - models_list[j].initial_weights[0][0])\n",
+    "\n",
+    "# Plot spectral distance vs. change in training loss\n",
+    "# Color by epoch\n",
+    "plt.scatter(spectral_distances, weight_deltas)\n",
+    "plt.xlabel('Spectral distance')\n",
+    "plt.ylabel('Difference in initial weight of first neuron in first hidden layer')\n",
+    "plt.title('Spectral distance vs. difference in initial weight of first neuron in first hidden layer')\n",
+    "\n",
+    "# Save plot to file\n",
+    "plt.savefig(f'results/p2_spectral_distance_v_weights_delta.png', bbox_inches='tight')\n",
+    "plt.show();"
    ]
   }
  ],
